# gpicdiff

./: .gitignore  .travis.yml  CompensateFiles.js  LICENSE  README.md  package-lock.json  package.json  vue.config.js
.github/workflows/: publish.yml
contrib/: git-gpicdiff.sh  gpicdiff.desktop
contrib/scripts/: git-gpicdiff
debian/: changelog  copyright
src/: App.vue  background.js  index.ejs  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  cli.rs  commands.rs  fileset.rs  main.rs  tempfile.rs
src/components/: Diff.vue
src/components/Diff/: AlphaDiff.vue
src/main/: index.js
src/renderer/components/: Diff.vue
src/renderer/components/Diff/: AlphaDiff.vue
src/renderer/router/: index.js
src/renderer/store/: index.js
src/renderer/store/modules/: FileSets.js
src/router/: index.js
src/store/: fileSets.js
test/e2e/specs/: Launch.spec.js
test/unit/specs/: Diff.spec.js
test/unit/specs/Diff/: AlphaDiff.spec.js
